[package]
name = "tx-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
csv-async = {version = "1.2", features = ["tokio", "with_serde", "tokio-stream"]}
serde = {version = "1.0", features = ["derive"]}
crossbeam = "0.8"
num_cpus = "1"